# MtkCSIdump

./: CMakeLists.txt  README.md  toolchain-aarch64-openwrt.cmake
.github/: copilot-instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml
scripts/: install_modules.sh
